objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>BasePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Base purchase price for this product as contracted with principal.</description>
        <label>Base Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <label>Incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incoterms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <description>Intercompany flag (from Account, where Account is a Supplier)</description>
        <formula>Supplier__r.Intercompany__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intercompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <label>Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PriceValidityEnd__c</fullName>
        <label>Price Validity End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceValidityStart__c</fullName>
        <label>Price Validity Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductCostInformation__c</fullName>
        <label>Product Cost Information</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShipFromAddress__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ship-from Address</label>
        <referenceTo>AccountShiptoAddress__c</referenceTo>
        <relationshipLabel>Price Book Entries (Ship-From Address)</relationshipLabel>
        <relationshipName>PbeShipFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipToAddress__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ship-to Address</label>
        <referenceTo>AccountShiptoAddress__c</referenceTo>
        <relationshipLabel>Price Book Entries</relationshipLabel>
        <relationshipName>PbeShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Supplier (V) for this Product / Price Book</description>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only allowed to select Suppliers for purchase prices</errorMessage>
            <filterItems>
                <field>Account.TF_RecordTypeDeveloperName__c</field>
                <operation>notContain</operation>
                <value>Customer</value>
            </filterItems>
            <infoMessage>Select a supplier</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Book Entries</relationshipLabel>
        <relationshipName>Price_Book_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TF_FilteredProduct__c</fullName>
        <description>Product2Id if active, else null. Used in Price Rules to crash a PBE-search if inactive</description>
        <formula>if (IsActive = true &amp;&amp; Product2.IsActive = true, CASESAFEID(Product2Id), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TF_FilteredProduct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_ForErpFlag__c</fullName>
        <formula>AND (
    UnitPrice &gt; 0,
    BasePrice__c 
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>For ERP</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>invalidListPrice</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    UnitPrice &gt; 0,
    NOT ( BasePrice__c )
)</errorConditionFormula>
        <errorMessage>You cannot set a List price, since the Base Price flag isn&apos;t set (Note: there should be only one price/currency marked as Base price for a given product).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>supplierRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
				BasePrice__c,
				UnitPrice &gt; 0,
				ISBLANK ( Supplier__c )
)</errorConditionFormula>
        <errorMessage>A Supplier is required for this purchase price, because Base price flag is enabled and the List price &gt; 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validValidityDates</fullName>
        <active>true</active>
        <errorConditionFormula>PriceValidityEnd__c &lt; PriceValidityStart__c</errorConditionFormula>
        <errorMessage>Price validity dates incorrect, please correct. Validity end date cannot be prior to the Validity start date.</errorMessage>
    </validationRules>
</CustomObject>